# Tdcool

./: CHANGELOG.md  LICENSE  Tdcool.cabal
app/: .goutputstream-5P5IX2  Main.hs  scraped.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: L1.hs  L2.hs  L3.hs  L4.hs  Ldata.hs
test/: Spec.hs  l1spec.hs
