cabal-version:       >= 1.2

name:               Tdcool
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Uran1u
maintainer:         milanjevic1a2b@example.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Executable Section
executable Tdcool
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >= 4.14 && < 5
                     , gloss >= 1.13 && < 2
  ghc-options:        -Wall

